# pynecone-practice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: formatter.yml
gyudozaapp/: pcconfig.py
gyudozaapp/gyudozaapp/: gyudozaapp.py
gyudozaapp/gyudozaapp/components/: navbar.py
gyudozaapp/gyudozaapp/pages/: door.py  index.py
